Fix for Code in comments overflowing
* https://github.com/busyorg/busy/issues/771

--- a/src/components/Story/Body.less
+++ b/src/components/Story/Body.less
@@ -104,6 +104,8 @@
     margin-bottom: 14px;
     line-height: 1em;
     background-color: #f7f7f9;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 
     code {
       font-size: 16px;
